[metadata]
name = NetworkScan-Tailspinn
version = 0.1.0
author = John Mora
author_email = tailspin@gmail.com/pypa/sampleproject/issues
description = Threaded TCP network scanner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tailspinn/NetworkScan
project_urls =
    Bug Tracker = https://github.com/Tailspinn/NetworkScan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src